# ParxeL

./: README.md  md.py  pyproject.toml
source/parxel/: iterator.py  lexer.py  nodes.py  parser.py  token.py
test/: test.py
test/parxel/: test_iterator.py  test_lexer.py  test_parser.py
