[build-system]
requires        = [
    "setuptools>=61.0"
]
build-backend   = "setuptools.build_meta"

[tool.setuptools]
packages = ["parxel"]

[tool.setuptools.package-dir]
"" = "source"

[project]
name            = "parxel"
version         = "0.0.8"
requires-python = ">=3.12"
description     = "A small lexer and parser utility library"
readme          = "README.md"
authors         = [ { name="styinx" } ]
classifiers     = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
license         = { file="LICENSE" }

[project.urls]
Homepage = "https://github.com/styinx/ParxeL"
Issues = "https://github.com/styinx/ParxeL/issues"
